<resources>
    <string name="about_meituan_customer_service_phone">客服电话：400-660-5335</string>
    <string name="about_meituan_idea">发现生活的美</string>
    <string name="about_meituan_version">美团v</string>
    <string name="about_to_expire">即将到期</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="account_settings">账户设置</string>
    <string name="add">添加</string>
    <string name="add_address">新建收货人信息</string>
    <string name="add_voucher">添加代金券</string>
    <string name="address_empty">地址不能为空</string>
    <string name="address_length_invalid">地址最少5个，最多60个字</string>
    <string name="address_name_empty">名字不能是空的</string>
    <string name="address_name_length_invalid">名字最少2个，最多15个字</string>
    <string name="address_phone_number_empty">电话不能为空</string>
    <string name="alipay_install_hint">安装提示</string>
    <string name="alipay_install_msg">您还没有安装支付宝客户端，建议您先安装，或选择支付宝网页支付。</string>
    <string name="all_categories">全部分类</string>
    <string name="amount_label">总价:</string>
    <string name="anonymous_review">匿名评价</string>
    <string name="app_name"> 美团 </string>
    <string name="around_deals">附近团购</string>
    <string name="back">返回</string>
    <string name="balance"><Data>账户余额：&lt;font color=#DB6633>%s&lt;/font>元</Data></string>
    <string name="balance_label">账户余额：</string>
    <string name="bind_mobile_phone_bind_button_text">绑定</string>
    <string name="bind_mobile_phone_buy_button_text">继续购买</string>
    <string name="bind_mobile_phone_code_button_text">获取验证码短信</string>
    <string name="bind_mobile_phone_code_label">请输入短信中的验证码</string>
    <string name="bind_mobile_phone_dialog_call_title">拨打客服电话</string>
    <string name="bind_mobile_phone_dialog_input_number">输入手机号</string>
    <string name="bind_mobile_phone_dialog_modify_number">修改手机号</string>
    <string name="bind_mobile_phone_dialog_msg">"绑定成功！
下次您可以用新号码直接登陆"</string>
    <string name="bind_mobile_phone_dialog_title_bind_fail">绑定新手机号失败</string>
    <string name="bind_mobile_phone_dialog_title_bind_success">绑定成功</string>
    <string name="bind_mobile_phone_dialog_title_verify_binded_fail">验证原手机号失败</string>
    <string name="bind_mobile_phone_for_the_first_time_dialog_msg">"绑定成功！
下次您可以用此号码直接登陆"</string>
    <string name="bind_mobile_phone_for_the_first_time_phone_label">请输入您的手机号</string>
    <string name="bind_mobile_phone_for_the_first_time_title">绑定手机号</string>
    <string name="bind_mobile_phone_get_code_fail">获取验证码失败</string>
    <string name="bind_mobile_phone_get_code_text">获取验证码</string>
    <string name="bind_mobile_phone_input_code">请先获取验证码</string>
    <string name="bind_mobile_phone_input_correct_number">请输入正确的手机号</string>
    <string name="bind_mobile_phone_new_phone_label">请输入新的手机号</string>
    <string name="bind_mobile_phone_no_binded_number">您还没有输入的当前绑定的手机号码</string>
    <string name="bind_mobile_phone_number_not_match">您输入的手机号与获取验证码的手机号(%s)不匹配</string>
    <string name="bind_mobile_phone_old_phone_label">请输入之前绑定的手机号</string>
    <string name="bind_mobile_phone_same_with_binded">与现在绑定号码相同</string>
    <string name="bind_mobile_phone_step_1_lable">验证原手机号</string>
    <string name="bind_mobile_phone_step_1_phone_hint">请输入之前绑定的手机号</string>
    <string name="bind_mobile_phone_step_1_submit_button">下一步</string>
    <string name="bind_mobile_phone_step_1_tips">如果手机丢失或停机，请联系客服解决：</string>
    <string name="bind_mobile_phone_step_2_lable">验证新手机号</string>
    <string name="bind_mobile_phone_step_2_phone_hint">请输入新手机号</string>
    <string name="bind_mobile_phone_step_2_submit_button">绑定</string>
    <string name="bind_mobile_phone_step_2_tips">重新绑定后，之前绑定的手机号将不能作为登录凭证</string>
    <string name="bind_mobile_phone_tips">"绑定成功后，您可以用新手机号直接登录
之前绑定的手机号将不再作为登陆凭证"</string>
    <string name="bind_mobile_phone_title">绑定新手机号</string>
    <string name="bind_mobile_phone_verification_code_hint">请输入验证码</string>
    <string name="bind_mobile_phone_verify_old_title">验证原手机号</string>
    <string name="bind_phone_number">绑定新手机号</string>
    <string name="birthday_not_set">请先选择生日</string>
    <string name="branch_count_format">%d店通用</string>
    <string name="buy_address_lab">收货地址</string>
    <string name="buy_bind_new_phone_lab">绑定新手机号</string>
    <string name="buy_bind_phone_hint">美团券密码或购买凭证将发送至该号码</string>
    <string name="buy_bind_phone_lab">您绑定的手机号码</string>
    <string name="buy_bind_phone_msg">请您先绑定手机号</string>
    <string name="buy_cal_freight_after_submit">提交订单后才能计算</string>
    <string name="buy_choose_again">重新选择</string>
    <string name="buy_consignee_lab">收货信息</string>
    <string name="buy_currency_unit">元</string>
    <string name="buy_deal_price_lab">单价：</string>
    <string name="buy_deals">去团购</string>
    <string name="buy_delivery_comment_lab"> 附加留言</string>
    <string name="buy_delivery_remark_hint">配送特殊说明，配送公司会尽量调节</string>
    <string name="buy_delivery_remark_lab">配送说明</string>
    <string name="buy_delivery_time_lab">送货时间</string>
    <string name="buy_error">错误</string>
    <string name="buy_error_buy_count_limit">抱歉，您已超出本单购买数量限制</string>
    <string name="buy_error_gen_order">生成订单失败</string>
    <string name="buy_error_get_buy_info">获取购买信息错误</string>
    <string name="buy_error_insufficient_total_remain">已经卖光了！请看看其它的吧~</string>
    <string name="buy_expire_tips_1">（有效期最后一天）：本单有效期至今晚24：00，购买后请及时消费</string>
    <string name="buy_expire_tips_2">本单有效期至%s，请注意周末、节假日是否可用</string>
    <string name="buy_freight_free">此单免运费</string>
    <string name="buy_freight_free_pre">（满</string>
    <string name="buy_freight_free_suffix">件免运费）</string>
    <string name="buy_freight_lab">运费：</string>
    <string name="buy_freight_total_free">0元</string>
    <string name="buy_hasno_address">没有收货人</string>
    <string name="buy_invalid_deal">无效的团购单子</string>
    <string name="buy_lottery_buy_limit_hint">（最多购买1件）</string>
    <string name="buy_movie_deals">团购购票</string>
    <string name="buy_no_verify_phone_title">您使用的手机号码</string>
    <string name="buy_now">立即抢购</string>
    <string name="buy_num_lab">数量：</string>
    <string name="buy_over">已结束</string>
    <string name="buy_refund">退款信息</string>
    <string name="buy_sold_out">卖光了</string>
    <string name="buy_soon">即将开始</string>
    <string name="buy_submit_order">提交订单</string>
    <string name="buy_submit_order_btn">提交订单</string>
    <string name="buy_subtotal_lab">小计：</string>
    <string name="buy_title">购买</string>
    <string name="buy_total_goods_price_lab">总价：</string>
    <string name="buy_total_price_lab">总价：</string>
    <string name="buy_type_num_lab">类型和数量：</string>
    <string name="cancel">取消</string>
    <string name="cancel_collect">收藏已取消</string>
    <string name="cancel_refund">取消退款</string>
    <string name="card_tail_num">尾号%s</string>
    <string name="change_city_confirm_format" formatted="false">您当前选择的城市为%s，是否切换至%s？</string>
    <string name="check_albums">点击查看相册</string>
    <string name="check_all_braches">查看全部%d家分店</string>
    <string name="check_all_comments">查看全部评价</string>
    <string name="check_all_comments_withcount">查看全部%d条评价</string>
    <string name="check_detail_info">查看图文详情</string>
    <string name="check_movie_detail_info">查看影片详情</string>
    <string name="check_network_then_click_for_retry">请检查网络后点击重新加载</string>
    <string name="check_verify_result">已发送，查看结果</string>
    <string name="choose_bank">选择银行</string>
    <string name="choose_birthday">请选择生日</string>
    <string name="choose_gender">请选择性别</string>
    <string name="choose_operation">请选择</string>
    <string name="cinema_addr">影院地址</string>
    <string name="cinema_address_label">地址:　</string>
    <string name="cinema_detail">影院优惠</string>
    <string name="cinema_front">影院前台</string>
    <string name="cinema_info">影院信息</string>
    <string name="cinema_label">影院:　</string>
    <string name="cinema_phone_label">电话:　</string>
    <string name="cinema_wanda">万达影院选座</string>
    <string name="citylist_error_not_finished">定位还未完成</string>
    <string name="citylist_error_not_located">未定位到城市，请选择</string>
    <string name="citylist_error_unsupport">当前城市未提供服务</string>
    <string name="citylist_gps_current">当前定位城市</string>
    <string name="citylist_gps_locating">正在定位</string>
    <string name="citylist_gps_relocate">重新定位</string>
    <string name="citylist_title_city_list">全部城市</string>
    <string name="citylist_title_hot">热门城市</string>
    <string name="citylist_title_recent">最近访问的城市</string>
    <string name="clear">清空</string>
    <string name="clear_history">清除历史记录</string>
    <string name="click2load">查看全部%d个团购</string>
    <string name="collect_success">收藏成功</string>
    <string name="com_tenpay_android_protocol">同意<u>《银行卡一键支付协议》</u></string>
    <string name="com_tenpay_android_tel_num"><u>0755-86013860</u></string>
    <string name="comment">评价</string>
    <string name="comming_shows">最近场次: %s</string>
    <string name="confirm">确定</string>
    <string name="confirm_delete_address">确定删除此收货人?</string>
    <string name="confirm_delete_order">确定删除%d个订单?</string>
    <string name="connecting">正在连接，请等待</string>
    <string name="continue_buy">继续购物</string>
    <string name="correct_poi_info">商家报错</string>
    <string name="count_label">数量:</string>
    <string name="cs_phone">400-660-5335</string>
    <string name="hint_address">最少5个，最多60个字,不能全部为数字</string>
    <string name="hint_address_name">最少两个，最多15个字</string>
    <string name="hint_address_phone_number">不少于七位</string>
    <string name="hint_zipcode">6位邮政编码</string>
    <string name="label_address">地址：</string>
    <string name="label_address_name">姓名：</string>
    <string name="label_address_phone_number">电话：</string>
    <string name="label_city">城市：</string>
    <string name="label_district">地区：</string>
    <string name="label_province">省份：</string>
    <string name="label_zipcode">邮编：</string>
    <string name="my_card_tip_title">温馨提示:</string>
    <string name="my_card_tips_1">1.长按解除银行卡绑定；</string>
    <string name="my_card_tips_2">2.解除绑定后，再次绑定需在支付进行过程中完成。</string>
    <string name="pay_check_code_hint">请输入短信验证码</string>
    <string name="pay_check_confirm">确定</string>
    <string name="pay_check_msg">验证码已发送至您绑定的手机</string>
    <string name="pay_check_resend_msg">没收到验证码？重新发送</string>
    <string name="pay_check_tips">为了您的账户安全，请验证手机号</string>
    <string name="pay_check_title">安全验证</string>
    <string name="save_and_use">保存并使用</string>
    <string name="share">分享</string>
    <string name="share_base_comment_hint">想说的话...</string>
    <string name="share_base_oauth_title">分享到以下平台</string>
    <string name="share_deal_settings_username_unbind">未绑定</string>
    <string name="share_oauth_qzone_name">QQ空间</string>
    <string name="share_oauth_renren_name">人人网</string>
    <string name="share_oauth_sina_weibo_name">新浪微博</string>
    <string name="share_oauth_tencent_weibo">腾讯微博</string>
    <string name="share_oauth_unauthorized">未授权</string>
    <string name="share_settings">分享设置</string>
    <string name="share_show_limit">还可输入%d字</string>
    <string name="use_as_default_address">设置成默认收货地址</string>
    <string name="verify_phone">验证手机</string>
</resources>