<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_address_name" />
            <EditText android:id="@id/name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_address_name" android:lines="2" android:layout_weight="1.0" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_address_phone_number" />
            <EditText android:id="@id/phone_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_address_phone_number" android:layout_weight="1.0" android:inputType="phone" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_province" />
            <Spinner android:id="@id/province" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_city" />
            <Spinner android:id="@id/city" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_district" />
            <Spinner android:id="@id/district" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_address" />
            <EditText android:id="@id/address" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_address" android:lines="2" android:layout_weight="1.0" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="@dimen/text_size_h5" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_zipcode" />
            <EditText android:id="@id/zipcode" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_zipcode" android:layout_weight="1.0" android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/checked" android:layout_width="28.0dip" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" />
            <TextView android:textSize="@dimen/text_size_h5" android:textColor="@color/black1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/use_as_default_address" android:layout_weight="1.0" />
        </LinearLayout>
        <Button android:textSize="@dimen/text_size_h5" android:textColor="@*android:color/white" android:id="@id/save" android:background="@drawable/bg_cornered_orange" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="10.0dip" android:text="@string/save_and_use" />
    </LinearLayout>
</ScrollView>