<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.sankuai.meituan">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="13.0sp" android:textColor="@color/black1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/share_settings" />
        <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="2.0px" />
        <com.actionbarsherlock.internal.widget.IcsLinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/share_settings_divider" android:showDividers="middle">
            <com.sankuai.meituan.base.widget.OauthBindView android:id="@id/oauth_sina" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_sina_weibo_authorized" app:appName="@string/share_oauth_sina_weibo_name" app:usrName="@string/share_deal_settings_username_unbind" />
            <com.sankuai.meituan.base.widget.OauthBindView android:id="@id/oauth_qzone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_qzone_authorized" app:appName="@string/share_oauth_qzone_name" app:usrName="@string/share_deal_settings_username_unbind" />
            <com.sankuai.meituan.base.widget.OauthBindView android:id="@id/oauth_renren" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_renren_authorized" app:appName="@string/share_oauth_renren_name" app:usrName="@string/share_deal_settings_username_unbind" />
            <com.sankuai.meituan.base.widget.OauthBindView android:id="@id/oauth_tencent_weibo" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_tencent_weibo_authorized" app:appName="@string/share_oauth_tencent_weibo" app:usrName="@string/share_deal_settings_username_unbind" />
        </com.actionbarsherlock.internal.widget.IcsLinearLayout>
    </LinearLayout>
</ScrollView>