<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.sankuai.meituan">
    <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:textSize="@dimen/text_size_h5" android:textColor="@color/black1" android:textColorHint="@color/black3" android:gravity="center_vertical" android:id="@id/comment" android:background="@color/white" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/share_base_comment_hint" android:singleLine="true" />
        <TextView android:textColor="@color/black3" android:gravity="right" android:id="@id/limit" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_show_limit" />
        <LinearLayout android:orientation="horizontal" android:background="@color/bg_gray" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="85.0dip" android:layout_marginTop="15.0dip">
            <ImageView android:id="@id/share_image" android:layout_width="105.0dip" android:layout_height="65.0dip" android:scaleType="fitXY" />
            <com.meituan.android.widget.WellChineseFormattedTextView android:textSize="15.0sp" android:textColor="@color/black2" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/share_content" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxLines="3" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="@color/black1" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/share_base_oauth_title" />
        <View android:background="@drawable/progress_draw" android:layout_width="fill_parent" android:layout_height="2.0sp" />
        <com.actionbarsherlock.internal.widget.IcsLinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/gray_horizontal_separator" android:showDividers="middle|end">
            <com.sankuai.meituan.base.widget.OauthToggleView android:id="@id/oauth_sina" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_share_sina_weibo" app:appName="@string/share_oauth_sina_weibo_name" app:usrName="@string/share_oauth_unauthorized" />
            <com.sankuai.meituan.base.widget.OauthToggleView android:id="@id/oauth_qzone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_share_qzone" app:appName="@string/share_oauth_qzone_name" app:usrName="@string/share_oauth_unauthorized" />
            <com.sankuai.meituan.base.widget.OauthToggleView android:id="@id/oauth_renren" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_share_renren" app:appName="@string/share_oauth_renren_name" app:usrName="@string/share_oauth_unauthorized" />
            <com.sankuai.meituan.base.widget.OauthToggleView android:id="@id/oauth_tencent_weibo" android:layout_width="fill_parent" android:layout_height="wrap_content" app:image="@drawable/ic_oauth_share_tencent_weibo" app:appName="@string/share_oauth_tencent_weibo" app:usrName="@string/share_oauth_unauthorized" />
        </com.actionbarsherlock.internal.widget.IcsLinearLayout>
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/btn_share" android:background="@drawable/bg_cornered_orange" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="30.0dip" android:text="@string/share" />
    </LinearLayout>
</ScrollView>