<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/two_step_bind_phone_header_tab" />
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip">
                <com.meituan.android.widget.EditTextWithClearButton android:textColorHint="#ffcccccc" android:layout_gravity="bottom" android:id="@id/mobile_phone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/bind_mobile_phone_step_1_phone_hint" android:layout_weight="1.0" android:inputType="number" style="@style/default_edit" />
                <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/get_code" android:background="@drawable/bg_cornered_green" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/bind_mobile_phone_get_code_text" />
            </LinearLayout>
            <com.meituan.android.widget.EditTextWithClearButton android:textColorHint="#ffcccccc" android:id="@id/code" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="20.0dip" android:hint="@string/bind_mobile_phone_verification_code_hint" android:inputType="number" style="@style/default_edit" />
            <TextView android:textSize="12.0sp" android:textColor="#ffe2704e" android:id="@id/tips_bind_new" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginBottom="13.0dip" android:text="@string/bind_mobile_phone_step_2_tips" />
            <Button android:id="@id/submit" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="17.0dip" android:text="@string/bind_mobile_phone_step_1_submit_button" style="@style/green_button" />
            <LinearLayout android:orientation="horizontal" android:id="@id/tips_verify_old" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip">
                <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_step_1_tips" />
                <TextView android:textSize="12.0sp" android:textColor="@color/green" android:id="@id/customer_service_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cs_phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>