<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="17.0sp" android:textColor="#ff000000" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pay_check_title" />
        <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0sp" android:text="@string/pay_check_tips" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0sp" android:text="@string/pay_check_msg" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
            <EditText android:id="@id/code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="31.0dip" android:hint="@string/pay_check_code_hint" android:inputType="number" style="@style/default_edit" />
            <Button android:enabled="false" android:textSize="20.0sp" android:textColor="@*android:color/white" android:gravity="center" android:id="@id/confirm" android:background="@drawable/bg_cornered_orange" android:paddingLeft="22.0dip" android:paddingTop="8.0dip" android:paddingRight="22.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/pay_check_confirm" />
            <TextView android:textColor="@color/link_color_selector" android:gravity="right" android:id="@id/resend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/pay_check_resend_msg" android:drawableRight="@drawable/ic_arrow_right" android:drawablePadding="5.0dip" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>