<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/old_mobile_phone_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_old_phone_label" />
        <com.meituan.android.widget.EditTextWithClearButton android:id="@id/old_mobile_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:inputType="number" style="@style/default_edit" />
        <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/new_mobile_phone_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_new_phone_label" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.meituan.android.widget.EditTextWithClearButton android:layout_gravity="bottom" android:id="@id/new_mobile_phone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="number" style="@style/default_edit" />
            <Button android:textColor="#ffffffff" android:id="@id/get_code" android:background="@drawable/bg_cornered_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_code_button_text" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bind_mobile_phone_code_label" />
        <com.meituan.android.widget.EditTextWithClearButton android:id="@id/code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number" style="@style/default_edit" />
        <Button android:id="@id/bind" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bind_mobile_phone_bind_button_text" style="@style/green_button" />
        <TextView android:textColor="#ff666666" android:id="@id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/bind_mobile_phone_tips" />
    </LinearLayout>
</ScrollView>