<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/old_mobile_phone_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_old_phone_label" />
    <com.meituan.android.widget.EditTextWithClearButton android:id="@id/old_mobile_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:inputType="number" style="@style/default_edit" />
    <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/new_mobile_phone_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_mobile_phone_new_phone_label" />
    <com.meituan.android.widget.EditTextWithClearButton android:layout_gravity="bottom" android:id="@id/new_mobile_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:inputType="number" style="@style/default_edit" />
    <Button android:textColor="#ffffffff" android:id="@id/verify" android:background="@drawable/bg_cornered_green" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/verify_phone" />
    <TextView android:id="@id/send_msg_tips" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:id="@id/check_verify" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/check_verify_result" style="@style/green_button" />
    <TextView android:textColor="#ff666666" android:id="@id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/bind_mobile_phone_tips" />
</LinearLayout>