<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@color/black1" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_card_tip_title" android:singleLine="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_card_tips_1" android:singleLine="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_card_tips_2" android:singleLine="true" />
</LinearLayout>